# zix

./: .gitignore
nix-meson-build-support/zig/: meson.build
packaging/: components.nix  dev-shell.nix
src/libcmd/: meson.options
src/libexpr/: meson.options
src/libexpr-c/: package.nix
src/libexpr-test-support/: package.nix
src/libexpr-tests/: package.nix
src/libfetchers/: build.zig  build.zig.zon  meson.build  package.nix
src/libfetchers-tests/: package.nix
src/libflake/: package.nix
src/libflake-c/: package.nix
src/libflake-tests/: package.nix
src/libmain/: build.zig  build.zig.zon  meson.build  package.nix
src/libmain-c/: meson.options  package.nix
src/libstore/: build.zig  build.zig.zon  globals.cc  globals.hh  globals.zig  libstore.zig  meson.build  meson.options  package.nix
src/libstore-c/: package.nix
src/libstore-test-support/: package.nix
src/libstore-tests/: package.nix
src/libutil/: build.zig  meson.build  meson.options  package.nix
src/libutil-c/: build.zig  build.zig.zon  meson.build  nix_api_util.cc  package.nix
src/libutil-test-support/: package.nix
src/libutil-tests/: package.nix
src/nix/: meson.options
src/perl/: meson.options
