# vim: filetype=meson

option('embedded-sandbox-shell', type : 'boolean', value : false,
  description : 'include the sandbox shell in the Nix binary',
)

option('sandbox-shell', type : 'string', value : 'busybox',
  description : 'path to a statically-linked shell to use as /bin/sh in sandboxes (usually busybox)',
)

option('store-dir', type : 'string', value : '/nix/store',
  description : 'path of the Nix store',
)

option('log-dir', type : 'string', value : '/nix/var/log/nix',
  description : 'path to store logs in for Nix',
)

option('abi', type : 'combo',
  choices: ['none', 'gnu', 'musl'],
  value: 'gnu',
  description: 'The ABI to pass to zig',
)
